--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 <title>jalormee.github.io</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <div>
+        <h1>Header</h1>
+    </div>
+    <div>
+        <h1>Works</h1>>
+    </div>
+    <div>
+        <h1>Profile</h1>>
+    </div>
+    <div>
+        <h1>Contact</h1>
+    </div>
 </body>
 </html>
