--- a/index.html
+++ b/index.html
@@ -5,16 +5,35 @@
 </head>
 <body>
     <div>
-        <h1>Header</h1>
+        <p>
+            Jeremy Wong
+            Technology Consultant
+            Singapore | Malaysia | Vietnam
+        </p>
     </div>
     <div>
-        <h1>Works</h1>>
+        <h1>Works</h1>
+        <p>
+            Change Management
+        </p>
+        <p>
+            Information Technology
+        </p>
+        <p>
+            Process Design
+        </p>
     </div>
     <div>
-        <h1>Profile</h1>>
+        <h1>Profile</h1>
+        <p>
+            Education
+            <br>Master of Science in Information Technology @ University College Dublin
+            <br>Bachelor of Science in Human Resource Management @ University College Dublin
+        </p>
     </div>
     <div>
-        <h1>Contact</h1>
+        <h1>Contact Me</h1>
+        <p>You can reach me via Linkedin @ https://www.linkedin.com/in/jeremywong1990/</p>
     </div>
 </body>
 </html>
