--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
     <div>
-        <p>
+        <H1>
             Jeremy Wong
-            Technology Consultant
-            Singapore | Malaysia | Vietnam
-        </p>
+            <br>Technology Consultant
+            <br>Singapore | Malaysia | Vietnam
+        </H1>
     </div>
     <div>
         <h1>Works</h1>
@@ -30,10 +30,16 @@
             <br>Master of Science in Information Technology @ University College Dublin
             <br>Bachelor of Science in Human Resource Management @ University College Dublin
         </p>
+        <p>
+            Profession
+            <br>Employer Servicing Advisory @ Ingeus Singapore
+            <br>Associate @ Certis Singapore
+            <br>Assistant Executive @ ONG&ONG
+        </p>
     </div>
     <div>
         <h1>Contact Me</h1>
-        <p>You can reach me via Linkedin @ https://www.linkedin.com/in/jeremywong1990/</p>
+        <p>You can reach me via Linkedin @ <a href="https://www.linkedin.com/in/jeremywong1990/">https://www.linkedin.com/in/jeremywong1990/</a></p>
     </div>
 </body>
 </html>
