--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <body>
     <div>
         <H1>
-            Jeremy Wong
-            <br>Technology Consultant
-            <br>Singapore | Malaysia | Vietnam
+            Jeremy Wong | Technology Consultant | Singapore | Malaysia | Vietnam
         </H1>
     </div>
     <div>
